# anytaggy

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/commands/: files.rs  mod.rs  rm_tags.rs  tag.rs  tags.rs  untag.rs
src/db/: mod.rs
src/db/migrations/: initial.sql
src/db/tables/: file_tags.rs  files.rs  mod.rs  tags.rs
src/tests/: cmd.rs  entrypoint.rs  files.rs  mod.rs  rm_tags.rs  tag.rs  tags.rs  untag.rs
src/tests/cmd/: files.rs  mod.rs  rm_tags.rs  tag.rs  tags.rs  untag.rs
tests/: common.rs  entrypoint.rs  files.rs  rm_tags.rs  tag.rs  tags.rs  untag.rs
