[package]
name = "anytaggy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5", features = ["derive", "string"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
rusqlite_migration = "2.3.0"
sha2 = "0.10"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
rand = "0.9"
temp-dir = "0.1.16"
