[package]
name = "anytaggy"
version = "0.1.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"

[dependencies]
anyhow = "1.0.99"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive", "string"] }
sha2 = "0.10"
rusqlite = { version = "0.37.0", features = ["bundled"] }
rusqlite_migration = "2.3.0"

[dev-dependencies]
rand = "0.9"
temp-dir = "0.1.16"
